# homematch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
homematch/: app.py  config.py  scrapy.cfg
homematch/data/: crawler_data_loader.py  image_data_donwloader.py  prepare_data.py  process_data.py  types.py
homematch/inmo_scraper/: items.py  middlewares.py  pipelines.py  settings.py
homematch/inmo_scraper/itemloaders/: pisosdotcom.py
homematch/inmo_scraper/itemloaders/transformers/: containers.py  strings.py  urls.py
homematch/inmo_scraper/spiders/: pisosdotcom.py
homematch/scripts/: populate_database.py  prepare_data.py
